# moyu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  build.bat  build.sh
.claude/: .gitignore  settings.json
TODO/: 01-product.md  02-runtime-memory.md  03-interaction-ui.md  04-mcp-tools.md  05-migration-acceptance.md  README.md
assets/: config.example.json  config.json
docs/: architecture.md  build.md  context.md  design.md  lua_api.md  mcp.md  skin-production-guide.zh-CN.md  user-guide.md  user-guide.zh-CN.md
examples/mcp/: reference_server.c
scripts/: default.lua
src/: agent.c  agent.h  async.c  async.h  builtin.c  builtin.h  chat.c  chat.h  context.c  context.h  desktop_os.c  desktop_os.h  emotion.c  emotion.h  event.c  event.h  font.c  font.h  hash.c  hash.h  image.c  image.h  llm.c  llm.h  log.c  log.h  loop.c  loop.h  lua_rt.c  lua_rt.h  main.c  mcp.c  mcp.h  mem.c  mem.h  memory.c  memory.h  persona.c  persona.h  platform.h  (+17 more)
src/core/: context.c  context.h  emotion.c  emotion.h  event.c  event.h  loop.c  loop.h  personality.c  personality.h
src/llm/: cache.c  cache.h  completion.c  completion.h
src/platform/: platform.h  platform_linux.c  platform_macos.m  platform_win32.c
src/render/: bubble.c  bubble.h  procedural.c  procedural.h  render.c  render.h  sprite.c  sprite.h
src/script/: lua_runtime.c  lua_runtime.h
src/tools/: mcp.c  mcp.h  tool.c  tool.h
src/util/: hash.c  hash.h  log.c  log.h  mem.c  mem.h
tests/: test_main.c
tools/: openchat.c
